--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -68,7 +68,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #F8F9D7;
+  background-color: #F1EB90;
 }
 
 [tabindex="-1"]:focus {
@@ -161,7 +161,7 @@ sup {
 }
 
 a {
-  color: #695aa6;
+  color: #114232;
   text-decoration: none;
   background-color: transparent;
 }
@@ -2771,15 +2771,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #c738bd;
-  border-color: #c738bd;
+  color: #114232;
+  background-color: #87A922;
+  border-color: #87A922;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #b042f4;
-  border-color: #b042f4;
+  background-color: #114232;
+  border-color: #114232;
 }
 
 .btn-primary:focus, .btn-primary.focus {
@@ -3043,15 +3043,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #c738bd;
-  border-color: #c738bd;
+  color: #114232;
+  border-color: #114232;
   border-width: 2px;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #b042f4;
-  border-color: #b042f4;
+  background-color: #87A922;
+  border-color: #87A922;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -11076,7 +11076,7 @@ a.text-dark:hover, a.text-dark:focus {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
   /* font-family: 'Baloo Paaji', cursive; */
-  color: #695aa6;
+  color: #114232;
 }
 
 .my-font {
@@ -11180,8 +11180,8 @@ p {
 
   background-image: linear-gradient(
     to right,
-    #c738bd 75%,
-    #c738bd 75%
+    #EC8F5E 75%,
+    #EC8F5E 75%
   );
   background-position: 0 3rem;
   background-repeat: repeat-x;
@@ -11191,7 +11191,7 @@ p {
 }
 
 .portfolios-links .underline:hover{
-  color:#c738bd;
+  color:#EC8F5E;
 }
 
 .portfolio-card-overlay{
@@ -11454,6 +11454,7 @@ pre .code {
           align-items: center;
   -webkit-transition: all, 0.3s;
   transition: all, 0.3s;
+  background-color: #f3b664;
   /* font-family: 'Baloo Paaji', cursive; */
 }
 
@@ -11534,12 +11535,8 @@ pre .code {
 }
 
 .custom-navbar.affix {
-  background: #fff;
+  background: #F3B664;
   border-bottom: 1px solid rgba(222, 226, 230, 0.34);
-}
-
-.custom-navbar.affix .logo {
-  color: #695aa6;
 }
 
 .custom-navbar.affix .container {
@@ -11724,7 +11721,7 @@ pre .code {
     position: absolute;
     top: calc(100% + 1px);
     left: 0;
-    background: #fff;
+    background: #F3B664;
     border-radius: 0 0 0 0;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -11880,7 +11877,6 @@ pre .code {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
-  display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -11889,8 +11885,7 @@ pre .code {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: #850F8D;
-  background-image: linear-gradient(#850F8D , #F8F9D7);
+  background-color: #f1eb90;
 }
 
 
@@ -11900,11 +11895,14 @@ pre .code {
   -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  max-width: 550px;
+  max-width: 650px;
 }
-
+.headerImg img{
+  margin-right: 8rem;
+  border-radius: 15rem;
+}
 .header .header-content .header-title .up {
-  font-size: calc(30px + (60 - 30) * ((100vw - 300px) / (1300 - 300)));
+  font-size: calc(20px + (60 - 30) * ((100vw - 300px) / (1300 - 300)));
   font-weight: 500;
   color: #444;
   margin-bottom: 5px;
@@ -11913,7 +11911,7 @@ pre .code {
 }
 
 .header .header-content .header-title .down {
-  font-size: calc(30px + (75 - 30) * ((100vw - 300px) / (1300 - 300)));
+  font-size: calc(20px + (75 - 30) * ((100vw - 300px) / (1300 - 300)));
   margin-bottom: 0;
   position: relative;
   display: block;
