--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -11538,7 +11538,7 @@ pre .code {
 }
 
 .custom-navbar .nav .item .link:hover, .custom-navbar .nav .item .link.active {
-  color: #695aa6;
+  color: #1795f2;
 }
 
 .custom-navbar.affix {
